spacing resolved

--- a/src/index.css
+++ b/src/index.css
@@ -66,15 +66,18 @@ label{
 }
 
 #mapInsert {
-  height: 75%;
-  width: 75%;
-  min-height:340px
+  height:360px;
 }
 .mapStyles {
   width: 50%;
   height: 50%;
-  max-height: 90px
+  /* max-height: 90px */
 }
+/* 
+.mapStyles div:first-child{
+  position: relative !important;
+ } */
+
 
 @media only screen and (max-width: 730px) {
   *{
@@ -104,10 +107,14 @@ label{
     border-radius: 0px;
   }
 
+
 }
 
 @media only screen and (min-width: 1600px) {
   *{
     font-size: x-large;
+  }
+    #mapInsert {
+    height:430px;
   }
 }
